# Platonic

./: Cargo.toml  README.md
src/: lexer.rs  parser.lalrpop
