[package]
name = "platonic"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A CAD kernel"
readme = "README.md"
repository = "https://github.com/davefol/Platonic"
exclude = ["resources/test/*"]

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
codespan = "0.11.1"
lalrpop-util = { version = "0.20.2" }
logos = "0.14.0"

